Updated translations, code cleanup to get rid of warnings.